--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates voluptatum reprehenderit error quos dolor, maiores laudantium tempore commodi impedit. Accusamus iste hic optio placeat alias sunt aspernatur maxime laborum quos!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam velit id amet vel consequuntur fugiat. Quaerat ducimus voluptate error eligendi corporis impedit ab ipsam laboriosam voluptatum, accusamus praesentium voluptatibus quod!</p>
         </article>
     </main>
 </body>
