--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
-            <img src="" alt="">
+            <img src="Imagens/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="Imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates voluptatum reprehenderit error quos dolor, maiores laudantium tempore commodi impedit. Accusamus iste hic optio placeat alias sunt aspernatur maxime laborum quos!</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML 5</a></p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
+            <img class="lado" src="Imagens/curso-javascript.png" alt="Curso Javascript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam velit id amet vel consequuntur fugiat. Quaerat ducimus voluptate error eligendi corporis impedit ab ipsam laboriosam voluptatum, accusamus praesentium voluptatibus quod!</p>
+            <p><a href="curso-js.html">Acesse o curso de Javascript</a></p>
         </article>
     </main>
 </body>
